clusters/helheim/core/argocd/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "argocd.houseofix.online"
    external-dns.alpha.kubernetes.io/target: "7dacd894-854f-492a-bb67-c03c24a4890f.cfargotunnel.com"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-gateway
  hostnames:
    - "argocd.houseofix.online"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
